# blueos-camera-download

./: Dockerfile  README.md
app/: main.py  pyproject.toml  settings.py  siyi-download.py  xfrobot-download.py
app/static/: index.html  register_service
files/: register_service
