[project]
name = "blueos-camera-download-extension"
version = "0.0.2"
description = "BlueOS Camera Download Extension"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "fastapi",
    "uvicorn[standard]"
]